--- a/src/main/resources/templates/createAdmin.html
+++ b/src/main/resources/templates/createAdmin.html
@@ -1,49 +1,75 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Create New Admin</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css" />
-    <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css"/>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div align="center">
-    <h1>Create New Admin</h1>
-    <br />
-     <div class="col-sm-4">
-    <form action="#" th:action="@{/save}" th:object="${admin}" method="post">
 
-      
- 		<div alight="left">
+    <h1>Create New Admin</h1>
+    <br/>
+
+    <div class="col-sm-4">
+
+        <form action="#" th:action="@{/createAdmin}" th:object="${admin}" method="post">
+
+            <!-- admin name-->
+            <div alight="left">
+                <tr>
+                    <label class="form-label">Admin Name</label>
+                    <td>
+                        <input type="hidden" th:field="*{id}"/>
+                        <input type="text" th:field="*{name}" class="form-control" placeholder="Admin Name"/>
+                    </td>
+                </tr>
+            </div>
+
+            <!-- admin username-->
+            <div alight="left">
+                <tr>
+                    <label class="form-label">Username</label>
+                    <td><input type="text" th:field="*{username}" class="form-control" placeholder="username"/></td>
+                </tr>
+            </div>
+
+            <!-- admin password-->
+            <div alight="left">
+                <tr>
+                    <label class="form-label">Password</label>
+                    <td><input type="text" th:field="*{password}" class="form-control" placeholder="password"/></td>
+                </tr>
+            </div>
+
+            <!-- admin email-->
+            <div alight="left">
+                <tr>
+                    <label class="form-label">Email</label>
+                    <td><input type="text" th:field="*{email}" class="form-control" placeholder="email"/></td>
+                </tr>
+            </div>
+
+            <!-- admin phone-->
+            <div alight="left">
+                <tr>
+                    <label class="form-label">Phone</label>
+                    <td><input type="text" th:field="*{phone}" class="form-control" placeholder="phone"/></td>
+                </tr>
+            </div>
+
+            <br>
             <tr>
-                <label class="form-label" >Admin Name</label>
-                <td>
-	                <input type="hidden" th:field="*{id}" />
-	                <input type="text" th:field="*{studentname}" class="form-control" placeholder="Student Name" />
+                <td colspan="2">
+                    <button type="submit" class="btn btn-info">Save</button>
                 </td>
             </tr>
-         </div>   
-            
-          	<div alight="left">
-          
-            <tr>
-                 <label class="form-label" >Course</label>
-                <td><input type="text" th:field="*{course}" class="form-control" placeholder="Course" /></td>
-            </tr>
-            </div> 
-            <div alight="left">
-                 <tr>
-                 <label class="form-label" >Fee</label>
-                <td><input type="text" th:field="*{fee}" class="form-control" placeholder="Fee" /></td>
-            </tr>
-            </div> 
-			<br>
-            <tr>
-            <td colspan="2"><button type="submit" class="btn btn-info">Save</button> </td>
-            </tr>
-        </table>
-    </form>
+
+            </table>
+        </form>
+    </div>
 </div>
 </body>
-</html> -->
+</html>
