--- a/src/main/resources/templates/addDiagnosisData.html
+++ b/src/main/resources/templates/addDiagnosisData.html
@@ -3,8 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <title>Patient Diagnosis Data</title>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
 </head>
+
 <body>
 
+<!-- create navigation bar ( header) -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:href="@{/}">Hospital App</a>
+        </div>
+    </div>
+</nav>
+
+<br>
+<br>
+<!-- Create HTML registration form -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+
+            <!-- success message -->
+            <div th:if="${param.success}">
+                <div class="alert alert-info">The Patient Diagnosis Data SuccessFully Saved!</div>
+            </div>
+
+            <h1>Add Diagnosis Data</h1>
+
+            <form th:action="@{/addDiagnosisData}" method="post" th:object="${diagnosisData}">
+
+                <div class="form-group">
+                    <label class="control-label" for="patientId"> Patient ID </label>
+                    <input id="patientId" class="form-control" th:field="*{patientId}"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="symptoms"> Symptoms </label>
+                    <input id="symptoms" class="form-control" th:field="*{symptoms}"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="diagnosisProvided"> Diagnosis Provided </label>
+                    <input id="diagnosisProvided" class="form-control" th:field="*{diagnosisProvided}"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="administeredBy"> Administered Physician ID </label>
+                    <input id="administeredBy" class="form-control" th:field="*{administeredBy}"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="dateOfDiagnosis"> Date of Diagnosis </label>
+                    <input id="dateOfDiagnosis" class="form-control" th:field="*{dateOfDiagnosis}" placeholder="yyyy-mm-dd"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="followUpRequired"> Follow up required </label>
+                    <input id="followUpRequired" class="form-control" th:field="*{followUpRequired}"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="dateOfFollowUp"> Date of follow up </label>
+                    <input id="dateOfFollowUp" class="form-control" th:field="*{dateOfFollowUp}" placeholder="yyyy-mm-dd"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="billAmount"> Bill amount </label>
+                    <input id="billAmount" class="form-control" th:field="*{billAmount}" placeholder="00.00"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="cardNumber"> Card number </label>
+                    <input id="cardNumber" class="form-control" th:field="*{cardNumber}" placeholder="xxxxxxxx"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="modeOfPayment"> Mode of payment </label>
+                    <input id="modeOfPayment" class="form-control" th:field="*{modeOfPayment}" placeholder="card/cash"
+                           required autofocus="autofocus" />
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
