--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,17 @@
             <a class="navbar-brand" href="#" th:href="@{/}">Registration and
                 Login Module</a>
         </div>
+
+        <div id="enrollPatient" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/enrollPatient}">Enroll Patient</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/addPhysician}">Add Physician</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/addDiagnosisData}">Add Diagnosis</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/searchPhysicians}">Search Physicians</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/viewPatientHistory}">Patient History</a></li>
+            </ul>
+        </div>
+
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
