--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,8 +23,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Registration and
-					Login Module</a>
+				<a class="navbar-brand" href="#" th:href="@{/}">AB Hospital</a>
 			</div>
 		</div>
 	</nav>
@@ -70,10 +69,6 @@
 						</div>
 					</div>
 				</form>
-				<div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registration}">Register
-								here</a></span>
-				</div>
 			</div>
 		</div>
 	</div>
