--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,21 +10,33 @@
 </head>
 <body>
 
-	<!-- create navigation bar ( header) -->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
+<!-- create navigation bar ( header) -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed"
 					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
 					aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Hospital App</a>
-			</div>
+				<span class="sr-only">Toggle navigation</span> <span
+					class="icon-bar"></span> <span class="icon-bar"></span> <span
+					class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#" th:href="@{/}">AB Hospital</a>
 		</div>
-	</nav>
+
+		<div id="enrollPatient" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/enrollPatient}">Enroll Patient</a></li>
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/addPhysician}">Add Physician</a></li>
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/addDiagnosisData}">Add Diagnosis</a></li>
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/searchPhysicians}">Search Physicians</a></li>
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/viewPatientHistory}">Patient History</a></li>
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/registration}">New Admin</a></li>
+				<li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
 
 <br>
 <br>
