--- a/src/main/resources/templates/searchPhysicians.html
+++ b/src/main/resources/templates/searchPhysicians.html
@@ -9,6 +9,35 @@
           crossorigin="anonymous">
 </head>
 <body>
+
+<!-- create navigation bar ( header) -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:href="@{/}">AB Hospital</a>
+        </div>
+
+        <div id="enrollPatient" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/enrollPatient}">Enroll Patient</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/addPhysician}">Add Physician</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/addDiagnosisData}">Add Diagnosis</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/searchPhysicians}">Search Physicians</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/viewPatientHistory}">Patient History</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/registration}">New Admin</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div align="center">
 
     <h1>Search Physicians</h1>
