--- a/src/main/resources/templates/addPhysician.html
+++ b/src/main/resources/templates/addPhysician.html
@@ -51,7 +51,7 @@
                 <div class="alert alert-info">The Physician successfully added!</div>
             </div>
 
-            <h1>Enroll Patient</h1>
+            <h1>Enroll Physician</h1>
 
             <form th:action="@{/addPhysician}" method="post" th:object="${physician}">
 
@@ -98,7 +98,8 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Enroll</button>
+                    <button type="submit" class="btn btn-success">Register</button>
+                    <input class="btn btn-danger" type="reset" value="Reset">
                 </div>
             </form>
         </div>
