--- a/src/main/resources/templates/addDiagnosisData.html
+++ b/src/main/resources/templates/addDiagnosisData.html
@@ -7,6 +7,12 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
+    <script language="javascript">
+        function enableDisable(bEnable, textBoxID)
+        {
+         document.getElementById(textBoxID).disabled = !bEnable
+        }
+    </script>
 </head>
 
 <body>
@@ -58,61 +64,63 @@
                 <div class="form-group">
                     <label class="control-label" for="patientId"> Patient ID </label>
                     <input id="patientId" class="form-control" th:field="*{patientId}"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="symptoms"> Symptoms </label>
                     <input id="symptoms" class="form-control" th:field="*{symptoms}"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="diagnosisProvided"> Diagnosis Provided </label>
                     <input id="diagnosisProvided" class="form-control" th:field="*{diagnosisProvided}"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="administeredBy"> Administered Physician ID </label>
                     <input id="administeredBy" class="form-control" th:field="*{administeredBy}"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="dateOfDiagnosis"> Date of Diagnosis </label>
-                    <input id="dateOfDiagnosis" class="form-control" th:field="*{dateOfDiagnosis}" placeholder="yyyy-mm-dd"
-                           required autofocus="autofocus" />
+                    <input id="dateOfDiagnosis" class="form-control" th:field="*{dateOfDiagnosis}"
+                           placeholder="yyyy-mm-dd"
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="followUpRequired"> Follow up required </label>
-                    <input id="followUpRequired" class="form-control" th:field="*{followUpRequired}"
-                           required autofocus="autofocus" />
+                    <input type="checkbox" id="followUpRequired" class="form-control" onclick="enableDisable(this.checked, 'dateOfFollowUp')" th:field="*{followUpRequired}">
                 </div>
+
 
                 <div class="form-group">
                     <label class="control-label" for="dateOfFollowUp"> Date of follow up </label>
-                    <input id="dateOfFollowUp" class="form-control" th:field="*{dateOfFollowUp}" placeholder="yyyy-mm-dd"
-                           required autofocus="autofocus" />
+                    <input id="dateOfFollowUp" class="form-control" th:field="*{dateOfFollowUp}"
+                           placeholder="yyyy-mm-dd"
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="billAmount"> Bill amount </label>
                     <input id="billAmount" class="form-control" th:field="*{billAmount}" placeholder="00.00"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="cardNumber"> Card number </label>
                     <input id="cardNumber" class="form-control" th:field="*{cardNumber}" placeholder="xxxxxxxx"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="modeOfPayment"> Mode of payment </label>
                     <input id="modeOfPayment" class="form-control" th:field="*{modeOfPayment}" placeholder="card/cash"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
