--- a/src/main/resources/templates/enrollPatient.html
+++ b/src/main/resources/templates/enrollPatient.html
@@ -79,8 +79,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label" for="email"> Email </label> <input
-                        id="email" class="form-control" th:field="*{email}" required
+                    <label class="control-label" for="email"> Email </label>
+                    <input type="email" id="email" class="form-control" aria-describedby="emailHelp" th:field="*{email}" required
                         autofocus="autofocus" />
                 </div>
 
